add on pkg reg and login jwt token
